; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgb/extr_cxgb_sge.c_refill_rspq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgb/extr_cxgb_sge.c_refill_rspq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sge_rspq = type { i32 }

@A_SG_RSPQ_CREDIT_RETURN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.sge_rspq*, i32)* @refill_rspq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @refill_rspq(i32* %0, %struct.sge_rspq* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.sge_rspq*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.sge_rspq* %1, %struct.sge_rspq** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @A_SG_RSPQ_CREDIT_RETURN, align 4
  %9 = load %struct.sge_rspq*, %struct.sge_rspq** %5, align 8
  %10 = getelementptr inbounds %struct.sge_rspq, %struct.sge_rspq* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @V_RSPQ(i32 %11)
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @V_CREDITS(i32 %13)
  %15 = or i32 %12, %14
  %16 = call i32 @t3_write_reg(i32* %7, i32 %8, i32 %15)
  ret void
}

declare dso_local i32 @t3_write_reg(i32*, i32, i32) #1

declare dso_local i32 @V_RSPQ(i32) #1

declare dso_local i32 @V_CREDITS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
